made user dashboard look nice on mobile made the assessment boxes center correctly and the information inside of them look correct

--- a/src/pages/user-dashboard/user-dashboard.scss
+++ b/src/pages/user-dashboard/user-dashboard.scss
@@ -155,6 +155,65 @@ page-user-dashboard {
     }
   }
 
+  @media screen and (max-width: 800px){
+    .assessment-boxes {
+      width: 90%;
+      left: 0;
+
+    }
+
+    .assessments {
+      width: 100%;
+      margin: 0 10px 0 40px;
+      margin-bottom: 20px;
+
+    }
+  }
+
+  @media screen and (max-width: 420px){
+    .assessment-boxes {
+      position: absolute;
+      left: 0;
+      // right: 10px;
+
+    }
+
+    .assessments {
+      margin: 0 10px 0 20px;
+      margin-bottom: 20px;
+
+      .an-assessment{
+        .assNav{
+          width: 55%;
+
+          button {
+            width: 90%;
+            h3 {
+              font-size: 9px;
+            }
+          }
+        }
+      }
+
+    }
+
+    .box-title  {
+      h3{
+        padding: 10px;
+      }
+    }
+
+    .details {
+      width: 35%;
+    }
+
+
+
+
+
+
+  }
+
 
 
 }
